--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^1.6.16",
     "@next/mdx": "^9.5.3",
     "next": "9.5.2",
+    "next-mdx-enhanced": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
