added more functionality parts, added border when hovering cards, did about us page

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "@mdx-js/loader": "^1.6.16",
     "@next/mdx": "^9.5.3",
+    "@zeit/next-css": "^1.0.1",
     "next": "9.5.2",
     "next-mdx-enhanced": "^4.0.0",
     "react": "16.13.1",
